--- a/Assignment1/Site.Master
+++ b/Assignment1/Site.Master
@@ -43,8 +43,8 @@
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li><a runat="server" href="~/">Home</a></li>
-                        <li><a runat="server" href="~/Receipes">Recipes</a></li>
-                        <li><a runat="server" href="~/AddReceipe">Add receipe</a></li>
+                        <li><a runat="server" href="~/Recipes">Recipes</a></li>
+                        <li><a runat="server" href="~/AddRecipe">Add recipe</a></li>
                         <li><a runat="server" href="~/Search">Search</a></li>
                     </ul>
                 </div>
